--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 .sameColorWhite { 
   color: #ffffff77;
   margin: 0;
-  padding: 0.3rem 0;
+  padding: 0.3rem 1rem;
+  width: 100%;
   cursor: pointer;
   font-size: 21px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
-.activedList { color: white; }
+.activedList { color: white; background-color: #2b3856}
 
 ::-webkit-scrollbar { width: 0.5rem; }
 
