--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
 .sameColorWhite { 
   color: #ffffff77;
   margin: 0;
-  padding: 0.3rem 0;
+  padding: 0.5rem 1rem;
+  width: 100%;
   cursor: pointer;
+  font-size: 21px;
+  text-overflow: ellipsis;
+  border-top: .1rem solid #ffffff77;
+  border-bottom: .1rem solid #ffffff77;
 }
 
-.activedList { color: white; }
+.activedList { color: white; background-color: #2b3856}
 
 ::-webkit-scrollbar { width: 0.5rem; }
 
