--- a/style.css
+++ b/style.css
@@ -91,3 +91,40 @@
   -webkit-transform-origin: left;
   transform-origin: left;
 }
+
+.dropbtn {
+  color: white;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  top: 2rem;
+  right: 0rem;
+  background-color: #f1f1f1;
+  min-width: 1rem;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  padding: 0.1rem 1rem;
+  font-size: small;
+  text-align: left;
+  border-radius: 0.3rem;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.show {display: grid;}
